--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
    <footer class="ds-footer text-center">
      <div class="container">
         <section>
-          <span>Stay in touch</span>
-          <h4>Ready to talk?</h4>
-          <p>Feel free to contact us</p>
-          <a href="mailto:test@test.com" class="ds-button">Lets Talk</a>
+          <span>Do you have further questions?</span>
+          <h4>Fel free to reach me</h4>
+          <p>At the following adress</p>
+          <a href="mailto:laia.tarres@upc.edu" class="ds-button">Contact me!</a>
         </section>
         <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
      </div>
