[WIP] Updating information

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <link href="assets/css/main.css" rel="stylesheet">
 
 
-    <title>Defolio - Bootstrap 5 html resume template </title>
+    <title>Laia Tarres</title>
   </head>
   <body>
    
@@ -217,9 +217,8 @@
      <div class="container">
         <section>
           <span>Do you have further questions?</span>
-          <h4>Fel free to reach me</h4>
-          <p>At the following adress</p>
-          <a href="mailto:laia.tarres@upc.edu" class="ds-button">Contact me!</a>
+          <h4>Feel free to reach me</h4>
+          <a href="mailto:laia.tarres@upc.edu" class="ds-button">Email me!</a>
         </section>
         <span class="ds-copyright">© 2022 All rights reserved. Free minimal bootstrap template by <a href="https://designstub.com/" target="_blank">Designstub</a>.</span>
      </div>
