[WIP]Changing url, and skills

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <!-- Main CSS -->
       <link href="assets/css/main.css" rel="stylesheet">
-
-
     <title>Laia Tarres </title>
   </head>
   <body>
@@ -28,14 +26,14 @@
             <div class="ds-header-inner">
               <!-- logo -->
               <a href="index.html" class="ds-logo">
-                <span>J</span>Laia Tarrés
+                <span>L</span>Laia Tarrés
               </a>
               <!-- logo -->
               <!-- social -->
               <ul class="ds-social">
-                <li><a href="#" target="_blank"><i class="ri-github-fill"></i></a></li>
+                <li><a href="https://github.com/LaiaTarres" target="_blank"><i class="ri-github-fill"></i></a></li>
                 <li><a href="#" target="_blank"><i class="ri-stack-overflow-line"></i></a></li>
-                <li><a href="#" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/laia-tarres" target="_blank"><i class="ri-linkedin-fill"></i></a></li>
               </ul>
               <!-- social -->
             </div>
@@ -83,7 +81,7 @@
       <div class="container">
         <section>
             <h2 class="ds-heading">About Me</h2>
-            <p>On September 2021 I decided to explore more in depth the possibilities of Deep Learning to help the Deaf and hard of hearing community. So I enrolled to the PhD program and I hope to contibute to the field while learning and having fun :)</p>
+            <p>On September 2021 I decided to explore more in depth the possibilities of Deep Learning to help the Deaf and hard of hearing community. So I enrolled to the PhD program and I hope to contibute to the field while learning and having fun :) At the same time, I am enjoying teaching Deep Learning to both undergratuate and graduate level. </p>
             <div class="ds-button-sec text-center">
                 <a href="#" class="ds-button">Download Resume</a>
             </div>
@@ -100,24 +98,23 @@
              <h2 class="ds-heading">Core Skills</h2>
              <ul class="ds-skills-list">
                <li>Python</li>
-               <li>HTML</li>
                <li>Pytorch</li>
-               <li>SQL</li>
                <li>Github</li>
-               <li>Teaching</li>
-               <li>...</li>
-               <li>...</li>
-               <li>...</li>
+               <li>Deep Learning</li>
+               <li>GAN</li>
+               <li>Transformers</li>
+               <li>Sign Language Understanding</li>
              </ul>
           </div>
           <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             <h2 class="ds-heading">Other Skills</h2>
             <ul class="ds-skills-list">
-              <li>Giving lessons</li>
-              <li>Preparing sessions</li>
+              <li>Giving lectures</li>
+              <li>Preparing laboratories</li>
               <li>Matlab</li>
               <li>C#</li>
-              <li>...</li>
+              <li>HTML</li>
+              <li>Voleyball</li>
             </ul>
           </div>
         </div>
@@ -132,9 +129,9 @@
         <div class="row ds-experience-list">
             <div class="col-12 col-sm-12 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
               <section>
-                <span class="ds-year">2019 - Present</span>
-                <h3 class="ds-officename">Matrix Media Inc</h3>
-                <span class="ds-department">Full Stack developer</span>
+                <span class="ds-year">2021 - Present</span>
+                <h3 class="ds-officename">UPC - BSC</h3>
+                <span class="ds-department">PhD Student</span>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut, congue enim. Sed fermentum.</p>
                 <ul>
                   <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis quis sem maximus, ornare metus ut.</li>
